--- a/src/wavefronts/README.org
+++ b/src/wavefronts/README.org
@@ -1,13 +1,14 @@
 * Wavefronts
 This project is named wavefronts because it was originally meant to render wavefronts only. But it's progressed to simulate [[https://en.wikipedia.org/wiki/Doppler_effect][The Doppler effect]].
 
-`wavefront1.py` and `wavefront2b.py` work. `wavefront2a.py` doesn't work but I'll leave it here so everyone can take a look. The following gifs are example outputs.
+~wavefront1.py~ and ~wavefront2b.py~ work. ~wavefront2a.py~ doesn't work but I'll leave it here so everyone can take a look. The following gifs are example outputs.
 
 Source moves slower than sound:
-[[https://github.com/swodig112/physicalsimulations/media/wavefront1.gif]]
+[[https://github.com/swodig112/physicalsimulations/blob/master/media/wavefront1.gif?raw=true]]
 
 Source and sound move at the same speed:
-[[https://github.com/swodig112/physicalsimulations/media/wavefront2.gif]]
+[[https://github.com/swodig112/physicalsimulations/blob/master/media/wavefront2.gif?raw=true]]
 
 Source moves faster than sound:
-[[https://github.com/swodig112/physicalsimulations/media/wavefront3.gif]]
+[[https://github.com/swodig112/physicalsimulations/blob/master/media/wavefront3.gif?raw=true]]
+
